--- a/index.html
+++ b/index.html
@@ -12,50 +12,53 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="music.png" /> </head>
-<body class="bg-gray-100">
-
-    <aside class="w-64 md:w-72 lg:w-80 bg-gradient-to-br from-gray-900 to-slate-800 text-white p-5 flex flex-col shadow-lg">
-        <h2 class="text-2xl font-bold border-b border-gray-700 pb-3 mb-4 flex items-center gap-3">
-            <i class="fa fa-music text-indigo-400"></i> Müzikler
-            <span id="songCountDesktop" class="text-base font-medium text-gray-400 ml-auto">0 Şarkı</span>
+<body class="light-theme"> <aside class="w-64 md:w-72 lg:w-80 text-white p-5 flex flex-col shadow-lg var-bg-sidebar">
+        <h2 class="text-2xl font-bold border-b pb-3 mb-4 flex items-center gap-3 var-border-sidebar-line">
+            <i class="fa fa-music var-text-accent"></i> Müzikler
+            <span id="songCountDesktop" class="text-base font-medium ml-auto var-text-sidebar-count">0 Şarkı</span>
         </h2>
         <nav class="space-y-2 mb-6">
-            <a href="#" class="flex items-center gap-3 p-3 rounded-lg text-indigo-400 bg-gray-700 hover:bg-gray-700 transition-colors">
+            <a href="#" class="flex items-center gap-3 p-3 rounded-lg var-text-accent var-bg-sidebar-active hover:var-bg-sidebar-active transition-colors">
                 <i class="fa fa-home"></i> Ana Sayfa
             </a>
-            <button id="searchButton" class="flex items-center gap-3 p-3 rounded-lg w-full text-left text-gray-300 hover:bg-gray-700 transition-colors">
+            <button id="searchButton" class="flex items-center gap-3 p-3 rounded-lg w-full text-left var-text-sidebar-link hover:var-bg-sidebar-hover transition-colors">
                 <i class="fa fa-search"></i> Ara
             </button>
         </nav>
 
-        <h3 class="text-lg font-semibold text-gray-400 mb-3">Çalma listeleri</h3>
+        <h3 class="text-lg font-semibold mb-3 var-text-sidebar-heading">Çalma listeleri</h3>
         <div id="musicListDesktop" class="flex-grow overflow-y-auto space-y-3 pr-2">
             </div>
     </aside>
 
-    <main class="flex-1 bg-gradient-to-br from-gray-100 to-gray-200 flex flex-col items-center justify-center p-5 md:p-10 relative overflow-y-auto">
+    <main class="flex-1 flex flex-col items-center justify-center p-5 md:p-10 relative overflow-y-auto var-bg-main">
 
-        <button id="adminButton" class="bg-slate-800 hover:bg-indigo-700 text-white font-semibold py-2 px-4 rounded-lg shadow-md transition-all flex items-center justify-center z-10">
-            <i class="fa fa-lock"></i>
-        </button>
+        <div class="absolute top-5 right-5 flex gap-2">
+            <button id="adminButton" class="py-2 px-4 rounded-lg shadow-md transition-all flex items-center justify-center z-10 var-bg-button var-text-button hover:var-bg-button-hover">
+                <i class="fa fa-lock"></i>
+            </button>
+            <button id="themeToggle" class="py-2 px-4 rounded-lg shadow-md transition-all flex items-center justify-center z-10 var-bg-button var-text-button hover:var-bg-button-hover">
+                <i class="fa fa-sun" id="themeIcon"></i> </button>
+        </div>
 
-        <div id="searchOverlay" class="fixed inset-0 bg-gray-900 bg-opacity-70 backdrop-blur-md z-40 flex flex-col items-center justify-start pt-20 hidden">
-            <button id="closeSearchBtn" class="absolute top-5 right-5 text-white text-3xl hover:text-gray-300 transition-colors">
+
+        <div id="searchOverlay" class="fixed inset-0 bg-opacity-70 backdrop-blur-md z-40 flex flex-col items-center justify-start pt-20 hidden var-bg-search-overlay">
+            <button id="closeSearchBtn" class="absolute top-5 right-5 text-3xl hover:var-text-search-overlay-close-hover transition-colors var-text-search-overlay-close">
                 <i class="fa fa-times"></i>
             </button>
-            <input type="text" id="searchInput" placeholder="Müzik Ara..." class="w-11/12 md:w-1/2 p-4 rounded-full bg-gray-800 text-white text-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 mb-6 shadow-lg">
-            <div id="searchResults" class="w-11/12 md:w-1/2 bg-gray-800 rounded-lg shadow-xl p-4 max-h-[60vh] overflow-y-auto space-y-2">
+            <input type="text" id="searchInput" placeholder="Müzik Ara..." class="w-11/12 md:w-1/2 p-4 rounded-full text-lg focus:outline-none focus:ring-2 focus:var-ring-accent mb-6 shadow-lg var-bg-input var-text-input var-placeholder-input">
+            <div id="searchResults" class="w-11/12 md:w-1/2 rounded-lg shadow-xl p-4 max-h-[60vh] overflow-y-auto space-y-2 var-bg-search-results">
                 </div>
         </div>
 
         <section class="w-full mb-10 relative">
             <div class="flex items-center justify-between mb-4">
-                <h2 class="text-2xl font-bold text-gray-800">Yaklaşan Şarkılar</h2>
+                <h2 class="text-2xl font-bold var-text-heading">Yaklaşan Şarkılar</h2>
                 <div class="flex gap-2">
-                    <button id="scrollLeftUpcoming" class="bg-gray-300 hover:bg-gray-400 text-gray-800 p-2 rounded-full transition-colors w-8 h-8 flex items-center justify-center">
+                    <button id="scrollLeftUpcoming" class="p-2 rounded-full transition-colors w-8 h-8 flex items-center justify-center var-bg-scroll-button hover:var-bg-scroll-button-hover var-text-scroll-button">
                         <i class="fa fa-chevron-left text-sm"></i>
                     </button>
-                    <button id="scrollRightUpcoming" class="bg-gray-300 hover:bg-gray-400 text-gray-800 p-2 rounded-full transition-colors w-8 h-8 flex items-center justify-center">
+                    <button id="scrollRightUpcoming" class="p-2 rounded-full transition-colors w-8 h-8 flex items-center justify-center var-bg-scroll-button hover:var-bg-scroll-button-hover var-text-scroll-button">
                         <i class="fa fa-chevron-right text-sm"></i>
                     </button>
                 </div>
@@ -66,34 +69,34 @@
 
 
         <div id="player" class="text-center flex flex-col items-center w-full px-4">
-            <img id="coverImage" src="https://placehold.co/300x300/e2e8f0/94a3b8?text=Müzik+Seçin" alt="Albüm Kapağı" width="300" height="300" class="rounded-xl shadow-xl mb-6 object-cover border-4 border-white"/>
-            <h3 id="currentSongTitle" class="text-xl font-semibold text-gray-800 mb-4 truncate w-full px-4">Müzik Seçin</h3>
+            <img id="coverImage" src="https://placehold.co/300x300/e2e8f0/94a3b8?text=Müzik+Seçin" alt="Albüm Kapağı" width="300" height="300" class="rounded-xl shadow-xl mb-6 object-cover border-4 var-border-cover"/>
+            <h3 id="currentSongTitle" class="text-xl font-semibold mb-4 truncate w-full px-4 var-text-heading">Müzik Seçin</h3>
 
             <audio id="audioPlayer"></audio>
 
-            <div class="custom-player-controls">
+            <div class="custom-player-controls var-bg-player-controls var-border-player-controls">
                 <div class="flex items-center gap-3 mb-3">
-                    <span id="currentTime" class="text-xs font-medium text-gray-600 w-10 text-left tabular-nums">0:00</span>
-                    <input type="range" id="seekBar" value="0" class="flex-grow seek-bar">
-                    <span id="totalDuration" class="text-xs font-medium text-gray-600 w-10 text-right tabular-nums">0:00</span>
+                    <span id="currentTime" class="text-xs font-medium w-10 text-left tabular-nums var-text-player-time">0:00</span>
+                    <input type="range" id="seekBar" value="0" class="flex-grow seek-bar var-seek-bar-track var-seek-bar-thumb">
+                    <span id="totalDuration" class="text-xs font-medium w-10 text-right tabular-nums var-text-player-time">0:00</span>
                 </div>
 
                 <div class="flex items-center justify-between">
                     <div class="w-1/4 flex justify-start"></div> <div class="flex items-center justify-center gap-4 flex-grow">
-                        <button id="prevBtn" class="text-gray-600 hover:text-gray-900 transition-colors w-8 h-8" aria-label="Önceki Şarkı" disabled>
+                        <button id="prevBtn" class="hover:var-text-player-control-hover transition-colors w-8 h-8 var-text-player-control" aria-label="Önceki Şarkı" disabled>
                             <i class="fa fa-backward-step fa-lg"></i>
                         </button>
-                        <button id="playPauseBtn" class="bg-indigo-600 hover:bg-indigo-700 text-white rounded-full w-12 h-12 flex items-center justify-center text-xl shadow-md transition-all transform hover:scale-105">
+                        <button id="playPauseBtn" class="rounded-full w-12 h-12 flex items-center justify-center text-xl shadow-md transition-all transform hover:scale-105 var-bg-accent var-text-player-button hover:var-bg-accent-hover">
                             <i class="fa fa-play fa-lg"></i>
                         </button>
-                         <button id="nextBtn" class="text-gray-600 hover:text-gray-900 transition-colors w-8 h-8" aria-label="Sonraki Şarkı" disabled>
+                         <button id="nextBtn" class="hover:var-text-player-control-hover transition-colors w-8 h-8 var-text-player-control" aria-label="Sonraki Şarkı" disabled>
                             <i class="fa fa-forward-step fa-lg"></i>
                         </button>
                     </div>
 
                     <div class="flex items-center justify-end gap-2 w-1/4">
-                        <i id="volumeIcon" class="fa fa-volume-high text-gray-600 hover:text-gray-900 cursor-pointer w-5 text-center"></i>
-                        <input type="range" id="volumeBar" min="0" max="1" step="0.01" value="1" class="w-20 h-1.5 bg-gray-300 rounded-full appearance-none cursor-pointer volume-bar accent-indigo-500">
+                        <i id="volumeIcon" class="fa fa-volume-high cursor-pointer w-5 text-center var-text-player-control hover:var-text-player-control-hover"></i>
+                        <input type="range" id="volumeBar" min="0" max="1" step="0.01" value="1" class="w-20 h-1.5 rounded-full appearance-none cursor-pointer volume-bar var-volume-bar-track var-volume-bar-thumb">
                     </div>
                 </div>
             </div>
@@ -101,61 +104,61 @@
     </main>
 
     <div id="mobileMusicListModal">
-        <div id="mobileMusicListContent">
-            <button id="closeMobileListBtn" class="absolute top-3 right-3 text-gray-400 hover:text-white text-2xl transition-colors">
+        <div id="mobileMusicListContent" class="var-bg-modal var-text-modal">
+            <button id="closeMobileListBtn" class="absolute top-3 right-3 text-2xl transition-colors var-text-modal-close hover:var-text-modal-close-hover">
                 <i class="fa fa-times"></i>
             </button>
-             <h2><i class="fa fa-music text-indigo-400"></i> Müzikler</h2>
+             <h2><i class="fa fa-music var-text-accent"></i> Müzikler</h2>
              <div id="musicListMobile" class="space-y-3 pr-2">
                  </div>
         </div>
     </div>
 
-    <div id="adminPanel" class="fixed inset-0 bg-black bg-opacity-80 backdrop-blur-sm text-white flex items-center justify-center z-50 hidden p-5">
-        <div class="bg-slate-800 p-6 md:p-8 rounded-xl shadow-2xl w-full max-w-md relative">
-            <button id="closeAdminPanelBtn" class="absolute top-3 right-3 text-gray-400 hover:text-white text-2xl transition-colors">
+    <div id="adminPanel" class="fixed inset-0 bg-opacity-80 backdrop-blur-sm flex items-center justify-center z-50 hidden p-5 var-bg-admin-overlay var-text-admin-panel">
+        <div class="p-6 md:p-8 rounded-xl shadow-2xl w-full max-w-md relative var-bg-admin-panel">
+            <button id="closeAdminPanelBtn" class="absolute top-3 right-3 text-2xl transition-colors var-text-admin-panel-close hover:var-text-admin-panel-close-hover">
                 <i class="fa fa-times"></i>
             </button>
 
-            <h2 class="text-2xl font-semibold mb-6 text-center flex items-center justify-center gap-3"><i class="fa fa-user-shield text-indigo-400"></i> Admin Paneli</h2>
+            <h2 class="text-2xl font-semibold mb-6 text-center flex items-center justify-center gap-3"><i class="fa fa-user-shield var-text-accent"></i> Admin Paneli</h2>
 
              <div id="loginForm" class="flex flex-col items-center space-y-4">
-                 <p class="text-gray-400 text-center">Giriş Yapın</p>
-                 <input type="email" id="authEmail" placeholder="Email" class="w-full p-3 bg-gray-700 border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 text-white placeholder-gray-400">
-                 <input type="password" id="authPass" placeholder="Şifre" class="w-full p-3 bg-gray-700 border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 text-white placeholder-gray-400">
-                 <button id="signInBtn" class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 px-4 rounded-lg transition-all flex items-center justify-center gap-2">
+                 <p class="text-center var-text-admin-panel-info">Giriş Yapın</p>
+                 <input type="email" id="authEmail" placeholder="Email" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:var-ring-accent var-bg-input var-text-input var-border-input var-placeholder-input">
+                 <input type="password" id="authPass" placeholder="Şifre" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:var-ring-accent var-bg-input var-text-input var-border-input var-placeholder-input">
+                 <button id="signInBtn" class="w-full font-bold py-3 px-4 rounded-lg transition-all flex items-center justify-center gap-2 var-bg-accent var-text-button hover:var-bg-accent-hover">
                      <i class="fa fa-sign-in-alt"></i> Giriş Yap
                  </button>
                  </div>
 
             <div id="adminControls" class="hidden flex-col space-y-4">
-                <p id="loggedInUserEmail" class="text-gray-300 text-center font-medium"></p> <button id="signOutBtn" class="w-max mx-auto bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-lg transition-all flex items-center justify-center gap-2 text-sm">
+                <p id="loggedInUserEmail" class="text-center font-medium var-text-admin-panel-info"></p> <button id="signOutBtn" class="w-max mx-auto font-bold py-2 px-4 rounded-lg transition-all flex items-center justify-center gap-2 text-sm var-bg-delete-button hover:var-bg-delete-button-hover var-text-button">
                      <i class="fa fa-sign-out-alt"></i> Çıkış Yap
                  </button>
 
-                <hr class="border-gray-600 my-4">
+                <hr class="my-4 var-border-admin-panel-line">
 
-                <h3 class="text-xl font-semibold text-gray-200 border-b border-gray-700 pb-2">Müzik Ekle</h3>
-                <input type="text" id="musicName" placeholder="Müzik Adı" class="w-full p-3 bg-gray-700 border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 text-white placeholder-gray-400">
+                <h3 class="text-xl font-semibold border-b pb-2 var-text-heading var-border-admin-panel-line">Müzik Ekle</h3>
+                <input type="text" id="musicName" placeholder="Müzik Adı" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:var-ring-accent var-bg-input var-text-input var-border-input var-placeholder-input">
 
-                <label class="block text-sm font-medium text-gray-300">Müzik Dosyası (MP3, WAV...):</label>
-                <input type="file" id="musicFile" accept="audio/*" class="w-full text-sm text-gray-400 file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-0 file:text-sm file:font-semibold file:bg-indigo-100 file:text-indigo-700 hover:file:bg-indigo-200 cursor-pointer">
+                <label class="block text-sm font-medium var-text-admin-panel-label">Müzik Dosyası (MP3, WAV...):</label>
+                <input type="file" id="musicFile" accept="audio/*" class="w-full text-sm file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-0 file:text-sm file:font-semibold cursor-pointer var-file-input-text var-file-input-bg hover:var-file-input-bg-hover var-text-input">
 
-                <label class="block text-sm font-medium text-gray-300">Kapak Resmi (İsteğe Bağlı):</label>
-                <input type="file" id="musicImage" accept="image/*" class="w-full text-sm text-gray-400 file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-0 file:text-sm file:font-semibold file:bg-indigo-100 file:text-indigo-700 hover:file:bg-indigo-200 cursor-pointer">
+                <label class="block text-sm font-medium var-text-admin-panel-label">Kapak Resmi (İsteğe Bağlı):</label>
+                <input type="file" id="musicImage" accept="image/*" class="w-full text-sm file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-0 file:text-sm file:font-semibold cursor-pointer var-file-input-text var-file-input-bg hover:var-file-input-bg-hover var-text-input">
 
-                <button id="addMusicBtn" class="w-full bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-4 rounded-lg transition-all flex items-center justify-center gap-2">
+                <button id="addMusicBtn" class="w-full font-bold py-3 px-4 rounded-lg transition-all flex items-center justify-center gap-2 var-bg-success-button hover:var-bg-success-button-hover var-text-button">
                     <i class="fa fa-plus"></i> Müziği Ekle
                 </button>
 
-                <hr class="border-gray-600 my-4">
+                <hr class="my-4 var-border-admin-panel-line">
 
-                <h3 class="text-xl font-semibold text-gray-200 border-b border-gray-700 pb-2">Müzik Sil</h3>
-                <label for="deleteSelect" class="block text-sm font-medium text-gray-300">Silinecek Müziği Seç:</label>
-                <select id="deleteSelect" class="w-full p-3 bg-gray-700 border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 text-white">
+                <h3 class="text-xl font-semibold border-b pb-2 var-text-heading var-border-admin-panel-line">Müzik Sil</h3>
+                <label for="deleteSelect" class="block text-sm font-medium var-text-admin-panel-label">Silinecek Müziği Seç:</label>
+                <select id="deleteSelect" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:var-ring-accent var-bg-input var-text-input var-border-input">
                     <option value="" disabled selected>Silmek için seçin...</option>
                      </select>
-                <button id="deleteMusicBtn" class="w-full bg-red-600 hover:bg-red-700 text-white font-bold py-3 px-4 rounded-lg transition-all flex items-center justify-center gap-2">
+                <button id="deleteMusicBtn" class="w-full font-bold py-3 px-4 rounded-lg transition-all flex items-center justify-center gap-2 var-bg-delete-button hover:var-bg-delete-button-hover var-text-button">
                     <i class="fa fa-trash"></i> Seçilen Müziği Sil
                 </button>
             </div>
